# tartine

./: LISENSE.md  README.md  pyproject.toml  requirements.txt
examples/: building_interfaces.py  create_binding_curve_plots.py  create_single_substrate_binding_curve_calc_dirs.py  create_symlinks.sh  get_info_for_training.py  multi_substrate_binding_curve_calc_dir_gen.py  plot_convergence_statistics.py  rename_pdb_files.sh  water_graphene_0_leg_xavi_binding_curve.csv
interface_analysis/: analysis_plotting_tools.py  interface_analysis_tools.py  water_analyser.py
interfaces_building/: building_interfaces.py  interface_builder.py  substrate_builder.py  water_adder.py  water_analyser.py
reference_calc_tools/aims_tools/: create_aims_files.py  fhi_aims_binding_curves.py  fhi_aims_input_file_tools.py  fhi_aims_output_analysis.py  make_fhi_aims_ref_calc_files.py
reference_calc_tools/config_files/: DFT_run_CSD3.slurm  control_default.in
reference_calc_tools/cp2k_tools/: cp2k_binding_curves.py  make_cp2k_ref_calc_files.py
scripts/bash_scripts/: update_fermi_temp.sh
scripts/example_scripts/: get_info_for_training.py  make_surfaces.py  plot_binding_curves.py
tartines/: utils.py
tartines/interface_analysis/: H_bond_plotting_tools.py  ads_energy_surface.py  analysis_plotting_tools.py  angular_plotting_tools.py  angular_plotting_tools_old.py  euler_species_partitions.json  interface_PES_tools.py  interface_analysis_tools.py  make_simulation_plots.py  water_analyser.py  (+1 more)
tests/: test_species_watershed.py
training_analysis/: training_data_analysis.py  validation_tools.py
(+27 files in other folders)
